<resources>
    <string name="app_name">Health Care</string>
    <string name="title_home">HOME</string>
    <string name="title_account">ACCOUNT</string>
    <string name="title_help">FAQ</string>
    <string name="clinic">Clinic</string>
    <string name="hospital">Hospital</string>
    <string name="medical_store">Medical Store</string>
    <string name="patient">Patient</string>
    <string name="diagnostic_centre">Diagnostic Centre</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forget_password">forget password ?</string>
    <string name="title_activity_book_appt">BookApptActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_1">You are continuing as %s, you will not be able to change this later.</string>
    <string name="continue_2">Do you want to continue as %s?</string>
    <string name="welcome_toolbar">welcome %s !</string>
    <string name="fees_placeholder">%d Rs.</string>
</resources>
